--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ span {
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
 .contact form .input-box input,
 .contact form textarea {
     width: 100%;
@@ -520,7 +521,8 @@ span {
 }
 
 .education-content .content p {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
     padding-top: .5rem;
 }
 .abt{
